--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "inquirer": "^9.2.7"
   },
   "devDependencies": {
-    "@types/inquirer": "^9.0.3"
+    "@types/inquirer": "^9.0.3",
+    "@types/node": "^20.3.2"
   },
   "type": "module"
 }
